--- a/index.html
+++ b/index.html
@@ -124,6 +124,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="./js/utils.js"></script>
 <script src="./js/movies.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.2.3/jquery.min.js"></script>
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.2.3/jquery.min.js"></script> -->
 <script src="./js/script.js"></script>
 </html>
