--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <section id="section">
       <div class="container">
         <div class="search-box mt-3">
-          <input class="js-search-input" type="text">
-          <select class="js-search-select" name="search-section"></select>
+          <input class="js-search-input" type="text" placeholder="enter a movie name">
+          <select class="js-search-select" name="search-select"></select>
         </div>
         <ul class="js-movies-list list-unstyled d-flex flex-wrap justify-content-between mt-4">
         </ul>
