--- a/index.html
+++ b/index.html
@@ -20,24 +20,24 @@
         <div class="search-box mt-3 d-flex align-items-center justify-content-end">
           <div class="d-flex justify-content-end">
             <!-- search by caterogy -->
-            <div class="form-floating">
-              <select class="js-search-select form-select rounded-0 rounded-start shadow-none pt-0 pb-0 mb-0 mt-0" id="floatingSelect" aria-label="Floating label select example" style="height: 40px; padding-top: 16px !important; width: 161px;">
+            <div class="form-floating placeholder-wave">
+              <select class="js-search-select form-select rounded-0 rounded-start shadow-none pt-0 pb-0 mb-0 mt-0 placeholder" id="floatingSelect" aria-label="Floating label select example" style="height: 40px; padding-top: 16px !important; width: 161px;">
                 <option value="All" class="fw-bold text-primary" selected>All</option>
               </select>
-              <label for="floatingSelect" class="pb-0 pt-2 mb-0">Search by category</label>
+              <label for="floatingSelect" class="pb-0 pt-2 mb-0 pla">Search by category</label>
             </div>
             <!-- end search by caterogy -->
 
             <!-- search by movie name -->
-            <div class="form-floating mb-3">
-              <input type="email" class="js-search-input form-control shadow-none border-start-0 border-end-0 rounded-0" id="floatingInput" placeholder="name@example.com" value="" style="height: 40px; padding-top: 20px;">
+            <div class="form-floating mb-3 placeholder-wave">
+              <input type="email" class="js-search-input form-control shadow-none border-start-0 border-end-0 rounded-0 placeholder" id="floatingInput" placeholder="name@example.com" value="" style="height: 40px; padding-top: 20px;">
               <label for="floatingInput" style="padding-top: 6px;">Search by movie title</label>
             </div>
             <!-- end search by movie name -->
 
             <!-- sort by -->
-            <div class="form-floating">
-              <select class="js-sort-select form-select border-start-1 rounded-0 shadow-none pt-0 pb-0 mb-0 mt-0" id="sort-by-string" aria-label="Floating label select example" style="height: 40px; padding-top: 16px !important; width: 85px;">
+            <div class="form-floating placeholder-wave">
+              <select class="js-sort-select form-select border-start-1 rounded-0 rounded-end  shadow-none pt-0 pb-0 mb-0 mt-0 placeholder" id="sort-by-string" aria-label="Floating label select example" style="height: 40px; padding-top: 16px !important; width: 85px;">
                 <option value="All" class="text-primary" selected>All</option>
                 <option class="fw-bold" disabled>Sort alphabetically</option>
                 <option value="A-Z">A-Z</option>
