--- a/index.html
+++ b/index.html
@@ -51,6 +51,19 @@
             <!-- end sort -->
           </div>
         </div>
+        <!-- fail box -->
+        <div class="fail-box d-flex align-items-center justify-content-end" style="height: 12px;">
+          <p class="fail-txt js-fail-txt text-danger d-none fw-bold fs-5 mb-0" style="margin-top: -15px;">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-emoji-expressionless mb-1" viewBox="0 0 16 16">
+            <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+            <path d="M4 10.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5zm5 0a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5z"/>
+            </svg>
+              Sorry! 
+            <span class="fw-normal">
+              search reults not found
+            </span>
+          </p>
+        </div>
 
         <!-- placeholder lists -->
         <ul class="js-movies-paceholder-list list-unstyled d-flex flex-wrap justify-content-between mt-4">
